--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI House Price Predictor</title>
+    <style>
+        <iframe
+        src="https://niharika-18-houseprice-predictor.hf.space"
+	    frameborder="0"
+	    width="850"
+	    height="450"></iframe>
+    </style>
+
 </head>
 <body>
     <h1>Welcome to the AI House Price Predictor</h1>
