--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI House Price Predictor</title>
-    <style>
-        <iframe
-        src="https://niharika-18-houseprice-predictor.hf.space"
-	    frameborder="0"
-	    width="850"
-	    height="450"></iframe>
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <h1>Welcome to the AI House Price Predictor</h1>
-    <p>This is the main page of the application.</p>
+    <section id="content">
+        <div class="iframe-container"><iframe
+            src="https://niharika-18-houseprice-predictor.hf.space"
+            frameborder="0"
+            class="fullscreen-iframe"
+            ></iframe>
+        </div>
+    </section>
 </body>
 </html>
